package gameLaby.laby;

import gameLaby.laby.utils.Cases;

public class Glace extends Cases {

    /**
     * Constructeur de la classe Cases
     *
     * @param x coordonnée x
     * @param y coordonnée y
     */
    public Glace(int x, int y) {
        super(x, y);
    }



}